--- a/fuentes/visuales/grado06/guion01/guionAbierto/CS_06_01_CO_Recurso050/Alumno.html
+++ b/fuentes/visuales/grado06/guion01/guionAbierto/CS_06_01_CO_Recurso050/Alumno.html
@@ -1,18 +1,12 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<!-- v : 10.10.8 -->
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-	
-	
-	<title></title>
-	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-	
-	<SCRIPT SRC='../_js/common.js'></SCRIPT>			
-	
-	<link rel="stylesheet" type="text/css" href="../_css/common.css" />
-	
-</head>
-<body>
+	<head>
+		<title></title>
+		<meta content="text/html; charset=iso-8859-1" http-equiv="Content-Type" />
+		<SCRIPT SRC='../_js/common.js'></SCRIPT>
+		<link href="../_css/common.css" rel="stylesheet" type="text/css" />
+	</head>
+	<body>
 		<p class="cabecera2">
 			Las etapas de la historia</p>
 		<p class="cabecera3">
@@ -26,39 +20,20 @@
 		<p class="tab1">
 			-<span class="negrita"> Edad de los metales</span>:<span class="negrita">&nbsp;</span>es la etapa de la prehistoria comprendida entre el descubrimiento de la <span class="negrita">metalurgia </span>(5000 a.C.) y la invenci&oacute;n de la escritura (3500 a.C.).</p>
 		<p class="cabecera3">
-			La edad antigua</p>
+			La Edad Antigua</p>
 		<p class="normal">
 			Es la etapa de la historia de la humanidad comprendida entre la aparici&oacute;n de los <span class="negrita">primeros documentos escritos </span>(3500 a.C.) y la desaparici&oacute;n del <span class="negrita">Imperio romano de Occidente</span> (476).</p>
 		<p class="cabecera3">
-			La edad media</p>
+			La Edad Media</p>
 		<p class="normal">
 			Es la etapa de la historia de la humanidad que comienza con la ca&iacute;da del <span class="negrita">Imperio romano de Occidente </span>(476) y finaliza con la <span class="negrita">toma de Constantinopla </span>por los turcos (1453) o la <span class="negrita">llegada de Col&oacute;n a Am&eacute;rica </span>(1492).</p>
 		<p class="cabecera3">
-			La edad moderna</p>
+			La Edad Moderna</p>
 		<p class="normal">
 			Es la etapa de la historia de la humanidad que comienza con la <span class="negrita">toma de Constantinopla</span> por los turcos (1453) o la <span class="negrita">llegada de Col&oacute;n a Am&eacute;rica </span>(1492) y finaliza con la <span class="negrita">revoluci&oacute;n francesa </span>(1789).</p>
 		<p class="cabecera3">
-			La edad contempor&aacute;nea</p>
+			La Edad Contempor&aacute;nea</p>
 		<p class="normal">
 			Es el per&iacute;odo de la historia de la humanidad que se extiende desde la <span class="negrita">revoluci&oacute;n francesa</span> (1789) hasta la <span class="negrita">actualidad</span>.</p>
-		<p class="cabecera2">
-			El eje cronol&oacute;gico</p>
-		<p class="normal">
-			El eje cronol&oacute;gico&nbsp;es una l&iacute;nea en la que se representa el paso del tiempo.&nbsp;Los a&ntilde;os y siglos posteriores al a&ntilde;o&nbsp;se cuentan hacia delante y pueden acompa&ntilde;arse con la abreviatura d.C. (despu&eacute;s de Cristo). Los a&ntilde;os y siglos anteriores se cuentan hacia atr&aacute;s y han de acompa&ntilde;arse con la abreviatura&nbsp;a.C. (antes de Cristo).</p>
-		<p class="normal">
-			Recuerda que para realizar un eje cronol&oacute;gico debes situar los <span class="negrita">hechos hist&oacute;ricos </span>sobre una <span class="negrita">l&iacute;nea </span>que representa el <span class="negrita">tiempo </span>(a&ntilde;os, siglos y&nbsp;milenios).</p>
-		<p class="normal">
-			Para confeccionar un eje cronol&oacute;gico hay que seguir los siguientes pasos:</p>
-		<p class="tab1">
-			1.&ordm; Trazar una l&iacute;nea horizontal.</p>
-		<p class="tab1">
-			2.&ordm; Situar el a&ntilde;o 1 d.C.</p>
-		<p class="tab1">
-			3.&ordm;&nbsp;Dividir la l&iacute;nea en partes iguales.</p>
-		<p class="tab1">
-			4.&ordm; Situar los a&ntilde;os anteriores al nacimiento de Cristo a la izquierda del a&ntilde;o 1.</p>
-		<p class="tab1">
-			5.&ordm; Situar los a&ntilde;os posteriores al nacimiento de Cristo a la derecha del a&ntilde;o 1.</p>
-		<p class="tab1">
-			6.&ordm; Indicar en el eje el a&ntilde;o y el acontecimiento hist&oacute;rico deseado.</p>
-	</body></html>
+	</body>
+</html>
