--- a/fuentes/visuales/grado06/guion01/guionAbierto/CS_06_01_CO_Recurso120/Alumno.html
+++ b/fuentes/visuales/grado06/guion01/guionAbierto/CS_06_01_CO_Recurso120/Alumno.html
@@ -1,20 +1,14 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<!-- v : 10.10.8 -->
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-	
-	
-	<title></title>
-	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-	
-	<SCRIPT SRC='../_js/common.js'></SCRIPT>			
-	
-	<link rel="stylesheet" type="text/css" href="../_css/common.css" />
-	
-</head>
-<body>
+	<head>
+		<title></title>
+		<meta content="text/html; charset=iso-8859-1" http-equiv="Content-Type" />
+		<SCRIPT SRC='../_js/common.js'></SCRIPT>
+		<link href="../_css/common.css" rel="stylesheet" type="text/css" />
+	</head>
+	<body>
 		<p class="cabecera2">
-			&iquest;Qu&eacute; son las fuentes audiovisuales?</p>
+			Las fuentes audiovisuales</p>
 		<p>
 			Las <span class="negrita">fuentes audiovisuales </span>son relativamente recientes. Se pueden distinguir distintos tipos:</p>
 		<p class="tab1">
@@ -27,4 +21,7 @@
 			-<span class="negrita"> Discos y grabaciones</span>: conservan m&uacute;sicas, sonidos o documentos sonoros de otras &eacute;pocas.</p>
 		<p class="tab1">
 			-<span class="negrita"> Internet</span>:<span class="negrita">&nbsp;</span>se convierte en una herramienta &uacute;til para acceder a distintos tipos de fuentes e informaciones de todo tipo. Es una gran ayuda a la hora de encontrar fuentes audiovisuales.</p>
-	</body></html>
+		<p>
+			&nbsp;</p>
+	</body>
+</html>
