--- a/fuentes/visuales/grado06/guion01/guionAbierto/CS_06_01_CO_Recurso170/Alumno.html
+++ b/fuentes/visuales/grado06/guion01/guionAbierto/CS_06_01_CO_Recurso170/Alumno.html
@@ -1,36 +1,29 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<!-- v : 10.10.8 -->
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-	
-	
-	<title></title>
-	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-	
-	<SCRIPT SRC='../_js/common.js'></SCRIPT>			
-	
-	<link rel="stylesheet" type="text/css" href="../_css/common.css" />
-	
-</head>
-<body>
-		<p class="cabecera2">
-			La arqueolog&iacute;a</p>
-		<p class="normal">
-			La <span class="negrita">arqueolog&iacute;a </span>es la ciencia que estudia las civilizaciones del pasado a partir del an&aacute;lisis&nbsp;de sus restos materiales y del contexto en el que se encuentran.</p>
-		<p class="normal">
-			Toda investigaci&oacute;n arqueol&oacute;gica se divide en cuatro fases:</p>
-		<p class="tab1">
-			1.&ordm; <span class="negrita">Prospecci&oacute;n</span>:<span class="negrita">&nbsp;</span>es la primera fase de la investigaci&oacute;n. Consiste en encontrar lugares donde pueda ocultarse un yacimiento. Para ello, es necesario hacer un buen trabajo de b&uacute;squeda de informaci&oacute;n.</p>
-		<p class="tab1">
-			2.&ordm; <span class="negrita">Excavaci&oacute;n</span>: una vez localizado un yacimiento, se pasa a excavar con el fin de descubrir los restos que se esconden bajo tierra.</p>
-		<p class="tab1">
-			3.&ordm;&nbsp;<span class="negrita">An&aacute;lisis de los restos</span>: en el laboratorio se estudian los restos encontrados para conocer qu&eacute; son y a qu&eacute; &eacute;poca pertenecieron.</p>
-		<p class="tab1">
-			4.&ordm; <span class="negrita">Interpretaci&oacute;n hist&oacute;rica</span>: a trav&eacute;s de la interpretaci&oacute;n, se reconstruye la historia del yacimiento y los posibles sucesos que explican&nbsp;la posici&oacute;n de las piezas&nbsp;encontradas.</p>
+	<head>
+		<title></title>
+		<meta content="text/html; charset=iso-8859-1" http-equiv="Content-Type" />
+		<SCRIPT SRC='../_js/common.js'></SCRIPT>
+		<link href="../_css/common.css" rel="stylesheet" type="text/css" />
+	</head>
+	<body>
 		<p class="cabecera2">
 			Las fuentes materiales</p>
 		<p>
-			Las<span class="negrita"> fuentes materiales </span>son objetos o artefactos&nbsp;(herramientas, monedas, armas, estatuas o&nbsp;cuadros)&nbsp;y edificios (casas, templos o&nbsp;puentes). Las fuentes m&aacute;s antiguas a menudo se encuentran bajo tierra, de manera que hay que hacer una excavaci&oacute;n para sacarlas a la superficie y poder estudiarlas.</p>
-		<p>
-			Las fuentes materiales puden ser <span class="negrita">fuentes escritas </span>(leyes, tratados, cr&oacute;nicas, cartas, diarios, contratos y documentos mercantiles), <span class="negrita">fuentes orales </span>(informaci&oacute;n que se transmite mediante relatos populares que han ido pasando de generaci&oacute;n en generaci&oacute;n) y <span class="negrita">fuentes audiovisuales </span>(fotograf&iacute;as y v&iacute;deos).</p>
-	</body></html>
+			Toda investigaci&oacute;n arqueol&oacute;gica se divide en cuatro fases:</p>
+		<p class="tab1">
+			1. <span class="negrita">Prospecci&oacute;n</span>: despu&eacute;s de encontrar informaci&oacute;n sobre los posibles yacimientos, se localiza el lugar.</p>
+		<p class="tab1">
+			2. <span class="negrita">Excavaci&oacute;n</span>: una vez localizado un yacimiento, se pasa a excavar con el fin de descubrir los restos que se posiblemente se encuentra bajo tierra.</p>
+		<p class="tab1">
+			3. <span class="negrita">An&aacute;lisis de los restos</span>: en el laboratorio se estudian los restos encontrados para conocer qu&eacute; son y a qu&eacute; &eacute;poca pertenecieron.</p>
+		<p class="tab1">
+			Para establecer el tiempo o antig&uuml;edad del yacimiento se utilizan los siguientes m&eacute;todos:</p>
+		<p class="tab2">
+			- <span class="negrita">Carbono-14 o radiocarbono</span>: todos los seres vivos absorben el is&oacute;topo carbono-14 (C-14) a lo largo de su vida. El proceso se detiene cuando mueren. A partir de ese momento, el carbono se descompone a una velocidad conocida que permite determinar cronolog&iacute;as con bastante precisi&oacute;n.</p>
+		<p class="tab2">
+			- <span class="negrita">Potasio arg&oacute;n</span>: toda roca volc&aacute;nica contiene potasio y un is&oacute;topo de arg&oacute;n. En el momento de formaci&oacute;n de la roca, el arg&oacute;n es liberado, pero el potasio se convierte en un is&oacute;topo de arg&oacute;n (Ar-40). Esa descomposici&oacute;n se da a una velocidad conocida que permite establecer la antig&uuml;edad de los restos encontrados a partir de las rocas de su entorno.</p>
+		<p class="tab1">
+			4. <span class="negrita">Interpretaci&oacute;n hist&oacute;rica</span>: a trav&eacute;s de la interpretaci&oacute;n, se reconstruye la historia del yacimiento y los posibles sucesos que explican la posici&oacute;n de las piezas encontradas.</p>
+	</body>
+</html>
