--- a/fuentes/visuales/grado06/guion01/guionAbierto/CS_06_01_CO_Recurso030/Alumno.html
+++ b/fuentes/visuales/grado06/guion01/guionAbierto/CS_06_01_CO_Recurso030/Alumno.html
@@ -1,18 +1,12 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<!-- v : 10.10.8 -->
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-	
-	
-	<title></title>
-	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-	
-	<SCRIPT SRC='../_js/common.js'></SCRIPT>			
-	
-	<link rel="stylesheet" type="text/css" href="../_css/common.css" />
-	
-</head>
-<body>
+	<head>
+		<title></title>
+		<meta content="text/html; charset=iso-8859-1" http-equiv="Content-Type" />
+		<SCRIPT SRC='../_js/common.js'></SCRIPT>
+		<link href="../_css/common.css" rel="stylesheet" type="text/css" />
+	</head>
+	<body>
 		<p class="cabecera2">
 			La cronolog&iacute;a</p>
 		<p>
@@ -49,4 +43,7 @@
 			Por ejemplo, para decir 4, escrib&iacute;an I (&ndash;1) + V (5) = IV (4)</p>
 		<p>
 			Recuerda que, en la actualidad,&nbsp;siglos y milenios se expresan con n&uacute;meros romanos, nunca con n&uacute;meros ar&aacute;bigos.</p>
-	</body></html>
+		<p>
+			&nbsp;</p>
+	</body>
+</html>
