--- a/fuentes/visuales/grado06/guion01/guionAbierto/CS_06_01_CO_Recurso030/Profesor.html
+++ b/fuentes/visuales/grado06/guion01/guionAbierto/CS_06_01_CO_Recurso030/Profesor.html
@@ -1,40 +1,34 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<!-- v : 10.10.8 -->
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-	
-	
-	<title></title>
-	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-	
-	<SCRIPT SRC='../_js/common.js'></SCRIPT>			
-	
-	<link rel="stylesheet" type="text/css" href="../_css/common.css" />
-	
-</head>
-<body>
+	<head>
+		<title></title>
+		<meta content="text/html; charset=iso-8859-1" http-equiv="Content-Type" />
+		<SCRIPT SRC='../_js/common.js'></SCRIPT>
+		<link href="../_css/common.css" rel="stylesheet" type="text/css" />
+	</head>
+	<body>
 		<p class="cabecera1">
-			Objetivo</p>
-		<p>
-			Esta secuencia de im&aacute;genes permite mostrar a los alumnos c&oacute;mo el ser humano ha tratado de medir el paso del tiempo desde hace milenios.&nbsp;Adem&aacute;s, se pone de&nbsp;relieve c&oacute;mo algunas fechas han quedado en la memoria&nbsp;colectiva para que los estudiantes comprendan el valor de la cronolog&iacute;a como herramienta para situar en el tiempo hechos que han marcado la historia de la humanidad.</p>
-		<p class="cabecera1">
-			Propuesta</p>
+			La cronolog&iacute;a</p>
 		<p class="cabecera2">
-			Antes del visionado</p>
+			Objetivo</p>
+		<p class="normal">
+			Mostrar a los estudiantes c&oacute;mo el ser humano ha tratado de medir el paso del tiempo desde hace milenios. Adem&aacute;s, se resaltan algunas fechas que han quedado en la memoria colectiva para que los estudiantes comprendan el valor de la cronolog&iacute;a como herramienta para situar en el tiempo hechos que han marcado la historia de la humanidad.</p>
+		<p class="cabecera2">
+			Antes de la presentaci&oacute;n</p>
 		<p>
-			Plantea al grupo una serie de preguntas destinadas a introducir el tema y conocer, a la vez, cu&aacute;les son los conocimientos que ya tienen sobre la cronolog&iacute;a y la medida del tiempo hist&oacute;rico:</p>
+			Plantee al grupo una serie de preguntas destinadas a introducir el tema y conocer, a la vez, cu&aacute;les son los conocimientos que ya tienen sobre la cronolog&iacute;a y la medida del tiempo hist&oacute;rico.</p>
 		<p class="tab1">
 			- &iquest;Para qu&eacute; sirve un reloj?</p>
 		<p class="tab1">
-			- &iquest;Medimos el tiempo hoy igual&nbsp;que hace cien a&ntilde;os? &iquest;Y que hace dos mil?</p>
+			- &iquest;Hoy medimos el tiempo igual que hace cien a&ntilde;os? &iquest;Y que hace dos mil?</p>
 		<p class="tab1">
 			- &iquest;Por qu&eacute; nos es &uacute;til medir el paso del tiempo?</p>
 		<p class="tab1">
 			- &iquest;Por qu&eacute; era &uacute;til en el pasado?</p>
 		<p class="cabecera2">
-			Despu&eacute;s del visionado</p>
+			Despu&eacute;s de la presentaci&oacute;n</p>
 		<p>
-			Despu&eacute;s de haber trabajado con la secuencia de im&aacute;genes, plantea una serie de preguntas para asegurar la comprensi&oacute;n del tema y los conceptos claves a recordar:</p>
+			Luego de haber trabajado con la secuencia de im&aacute;genes, plantee una serie de preguntas para asegurar la comprensi&oacute;n del tema y los conceptos que deben recordar:</p>
 		<p class="tab1">
 			- &iquest;Qu&eacute; es un calendario?</p>
 		<p class="tab1">
@@ -44,13 +38,14 @@
 		<p class="tab1">
 			- &iquest;Qu&eacute; fecha marca nuestro calendario?</p>
 		<p class="tab1">
-			- &iquest;Qu&eacute; fecha es m&aacute;s antigua: el 453 a.C. o el 453 d.C.?</p>
+			- &iquest;Qu&eacute; fecha es m&aacute;s antigua: el 453 a.n.e o el 453 d.C.?</p>
 		<p class="tab1">
-			- &iquest;En qu&eacute; siglo nacist&eacute;is? &iquest;En qu&eacute; a&ntilde;o comenz&oacute;? &iquest;En qu&eacute; a&ntilde;o acabar&aacute;? Escribid el siglo y los a&ntilde;os.</p>
+			- &iquest;En qu&eacute; siglo naciste? &iquest;En qu&eacute; a&ntilde;o comenz&oacute;? &iquest;En qu&eacute; a&ntilde;o acabar&aacute;? Escribe el siglo y los a&ntilde;os.</p>
 		<p class="tab1">
-			- &iquest;En qu&eacute; siglo nacieron vuestros abuelos? &iquest;En qu&eacute; a&ntilde;o comenz&oacute;? &iquest;En qu&eacute; a&ntilde;o acab&oacute;? Escribid el siglo y los a&ntilde;os.</p>
+			- &iquest;En qu&eacute; siglo nacieron tus abuelos? &iquest;En qu&eacute; a&ntilde;o comenz&oacute;? &iquest;En qu&eacute; a&ntilde;o acab&oacute;? Escribe el siglo y los a&ntilde;os.</p>
 		<p>
-			Pide a tus alumnos que busquen informaci&oacute;n sobre alg&uacute;n hecho hist&oacute;rico importante y que se&ntilde;alen en qu&eacute; fecha se produjo (a&ntilde;o y siglo) y que reflexionen sobre por qu&eacute; creen que fue importante.</p>
+			Pida a sus estudiantes que busquen informaci&oacute;n sobre alg&uacute;n hecho hist&oacute;rico importante, que se&ntilde;alen en qu&eacute; fecha se produjo (a&ntilde;o y siglo) y que reflexionen por qu&eacute; creen que fue importante.</p>
 		<p>
-			Para ampliar la explicaci&oacute;n sobre qu&eacute; es la cronolog&iacute;a y cu&aacute;l es su valor puedes consultar la secci&oacute;n del mismo nombre de la Gran Enciclopedia Planeta. Llama la atenci&oacute;n sobre c&oacute;mo esta no solo sirve para estudiar la historia de un lugar espec&iacute;fico sino que tambi&eacute;n ayuda a contrastar hechos coincidentes en el tiempo aunque separados en el espacio [<a href="/BCRedir.aspx?URL=/encyclopedia/asp/LineaTiempo.asp" target="_blank">ver</a>].</p>
-	</body></html>
+			Para ampliar la explicaci&oacute;n sobre qu&eacute; es la cronolog&iacute;a y cu&aacute;l es su valor puede consultar la secci&oacute;n del mismo nombre de la Gran Enciclopedia Planeta. Llame la atenci&oacute;n sobre c&oacute;mo la cronolog&iacute;a no solo sirve para estudiar la historia de un lugar espec&iacute;fico sino que tambi&eacute;n ayuda a contrastar hechos coincidentes en el tiempo aunque separados en el espacio <a href="http://profesores.aulaplaneta.com/BCRedir.aspx?URL=/encyclopedia/asp/LineaTiempo.asp" target="_blank">[VER]</a>.</p>
+	</body>
+</html>
