--- a/fuentes/visuales/grado06/guion01/guionAbierto/CS_06_01_CO_Recurso050/Profesor.html
+++ b/fuentes/visuales/grado06/guion01/guionAbierto/CS_06_01_CO_Recurso050/Profesor.html
@@ -1,44 +1,39 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<!-- v : 10.10.8 -->
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-	
-	
-	<title></title>
-	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-	
-	<SCRIPT SRC='../_js/common.js'></SCRIPT>			
-	
-	<link rel="stylesheet" type="text/css" href="../_css/common.css" />
-	
-</head>
-<body>
+	<head>
+		<title></title>
+		<meta content="text/html; charset=iso-8859-1" http-equiv="Content-Type" />
+		<SCRIPT SRC='../_js/common.js'></SCRIPT>
+		<link href="../_css/common.css" rel="stylesheet" type="text/css" />
+	</head>
+	<body>
 		<p class="cabecera1">
+			Las etapas de la historia</p>
+		<p class="cabecera2">
 			Objetivo</p>
 		<p class="normal">
-			El objetivo de este recurso es que los alumnos&nbsp;relacionen las im&aacute;genes&nbsp;de unos&nbsp;hechos relevantes con la etapa hist&oacute;rica a la que pertenecen y adquieran las bases para construir un eje cronol&oacute;gico.</p>
-		<p class="cabecera1">
-			Propuesta</p>
+			Relacionar las im&aacute;genes de unos hechos relevantes con la etapa hist&oacute;rica a la que pertenecen y adquirir las bases para construir un eje cronol&oacute;gico.</p>
 		<p class="cabecera2">
-			Antes del visionado</p>
+			Antes de la presentaci&oacute;n</p>
 		<p class="normal">
-			Plantea las siguientes preguntas para detectar cu&aacute;les son las ideas que los alumnos tienen sobre las distintas etapas de la historia:</p>
+			Plantee las siguientes preguntas para detectar cu&aacute;les son las ideas que los estudiantes tienen sobre las distintas etapas de la historia:</p>
 		<p class="tab1">
 			- &iquest;En cu&aacute;ntas etapas se divide la historia?</p>
 		<p class="tab1">
 			- &iquest;Cu&aacute;l es la etapa de la historia m&aacute;s larga?</p>
 		<p class="tab1">
-			- &iquest;En qu&eacute; pens&aacute;is cuando os hablan de prehistoria? &iquest;C&oacute;mo lo representar&iacute;ais?</p>
+			- &iquest;En qu&eacute; piensas cuando te hablan de prehistoria? &iquest;C&oacute;mo la representas?</p>
 		<p class="tab1">
-			- Pensad en un hecho importante de cada una de las etapas hist&oacute;ricas.</p>
+			- Piensa en un hecho importante de cada una de las etapas hist&oacute;ricas.</p>
 		<p class="cabecera2">
-			Despu&eacute;s del visionado</p>
+			Despu&eacute;s de la presentaci&oacute;n</p>
 		<p class="normal">
-			Dibuja una l&iacute;nea en la pizarra y haz que alguno de los alumnos divida la l&iacute;nea (eje cronol&oacute;gico) en partes que se correspondan a las distintas etapas de la historia.</p>
+			Dibuje una l&iacute;nea en el tablero y haga que alguno de los estudiantes divida la l&iacute;nea (eje cronol&oacute;gico) en partes que&nbsp; correspondan a las distintas etapas de la historia.</p>
 		<p class="normal">
-			La mayor&iacute;a de la gente dividir&iacute;a esa l&iacute;nea&nbsp;de forma m&aacute;s o menos regular. La idea es destacar&nbsp;la larga duraci&oacute;n de&nbsp;la prehistoria frente al resto de etapas hist&oacute;ricas, apenas un instante frente a aquella.&nbsp;</p>
+			La mayor&iacute;a de la gente dividir&iacute;a esa l&iacute;nea de forma m&aacute;s o menos regular. La idea es destacar la larga duraci&oacute;n de la prehistoria frente al resto de etapas hist&oacute;ricas.</p>
 		<p class="normal">
-			Hecho esto, pide a los alumnos que construyan un eje cronol&oacute;gico en el que se destaquen las fechas de comienzo y fin de las distintas etapas de la historia y tambi&eacute;n otro hecho relevante de cada una de las etapas.</p>
+			Hecho esto, pida a los estudiantes que construyan un eje cronol&oacute;gico en el que se destaquen las fechas de comienzo y fin de las distintas etapas de la historia y tambi&eacute;n otro hecho relevante de cada una de ellas.</p>
 		<p class="normal">
-			Prop&oacute;n a tus alumnos que por parejas o grupos, compren una revista de historia y recorten diferentes fotograf&iacute;as de otras &eacute;pocas. En clase, hazte con un par de cartulinas y entre todos los alumnos, deber&aacute;n ir pegando las fotograf&iacute;as (separ&aacute;ndolas por per&iacute;odos) y construir un gran eje cronol&oacute;gico.</p>
-	</body></html>
+			Proponga a los estudiantes que por parejas o grupos compren una revista de historia y recorten diferentes fotograf&iacute;as de otras &eacute;pocas. En clase,&nbsp; con un par de cartulinas y entre todos los estudiantes, peguen las fotograf&iacute;as (separ&aacute;ndolas por periodos) y construyan un gran eje cronol&oacute;gico.</p>
+	</body>
+</html>
