--- a/fuentes/visuales/grado06/guion01/guionAbierto/CS_06_01_CO_Recurso100/Profesor.html
+++ b/fuentes/visuales/grado06/guion01/guionAbierto/CS_06_01_CO_Recurso100/Profesor.html
@@ -1,38 +1,35 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<!-- v : 10.10.8 -->
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-	
-	
-	<title></title>
-	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-	
-	<SCRIPT SRC='../_js/common.js'></SCRIPT>			
-	
-	<link rel="stylesheet" type="text/css" href="../_css/common.css" />
-	
-</head>
-<body>
+	<head>
+		<title></title>
+		<meta content="text/html; charset=iso-8859-1" http-equiv="Content-Type" />
+		<SCRIPT SRC='../_js/common.js'></SCRIPT>
+		<link href="../_css/common.css" rel="stylesheet" type="text/css" />
+	</head>
+	<body>
 		<p class="cabecera1">
+			Las fuentes orales</p>
+		<p class="cabecera2">
 			Objetivo</p>
 		<p class="normal">
-			Esta secuencia de im&aacute;genes permite mostrar a los alumnos c&oacute;mo&nbsp;a lo largo de los siglos la humanidad ha transmitido de forma oral todo tipo de relatos sobre hechos ficticios o ver&iacute;dicos. Adem&aacute;s, tambi&eacute;n permite&nbsp;reflexionar sobre la importancia de la memoria en el estudio de la historia.&nbsp;&nbsp;</p>
-		<p class="cabecera1">
-			Propuesta</p>
+			Mostrar a los estudiantes c&oacute;mo la humanidad ha transmitido de forma oral todo tipo de relatos sobre hechos ficticios o ver&iacute;dicos. Adem&aacute;s, permite reflexionar sobre la importancia de la memoria en el estudio de la historia.</p>
 		<p class="cabecera2">
-			Antes del visionado</p>
-		<p class="normal">
-			Formula algunas preguntas a los alumnos que promuevan la reflexi&oacute;n sobre el tema:</p>
+			Antes de la presentaci&oacute;n</p>
+		<p>
+			Formule algunas preguntas que promuevan la reflexi&oacute;n sobre el tema:</p>
 		<p class="tab1">
-			- &iquest;C&oacute;mo conocer los hechos del pasado lejano&nbsp;si no&nbsp;se hubiese podido leer en alg&uacute;n documento?</p>
+			- &iquest;C&oacute;mo se podr&iacute;an conocer los hechos del pasado lejano sin documentos escritos?</p>
 		<p class="tab1">
-			- &iquest;Conoc&eacute;is alg&uacute;n mito, leyenda o cuento?&nbsp;&iquest;Cu&aacute;l es la diferencia entre ellos?</p>
+			- &iquest;Conoces alg&uacute;n mito, leyenda o cuento? &iquest;Cu&aacute;l es la diferencia entre ellos?</p>
 		<p class="cabecera2">
-			Despu&eacute;s del visionado</p>
-		<p class="normal">
-			Plantea unas preguntas para que los alumnos discutan sobre la siguiente cuesti&oacute;n: &iquest;pueden ser los relatos transmitidos de generaci&oacute;n en generaci&oacute;n &uacute;tiles para conocer la historia de&nbsp;las sociedades&nbsp;que nos precedieron? &iquest;Cu&aacute;les son los aspectos positivos y negativos?</p>
-		<p class="normal">
-			Por &uacute;ltimo, pide a los alumnos que pregunten a sus abuelos sobre alg&uacute;n episodio de su propia historia personal o bien sobre alguna historia que les contasen cuando eran peque&ntilde;os. Despu&eacute;s, los alumnos tendr&aacute;n que exponerla frente al resto de la clase.</p>
-		<p class="normal">
-			Prop&oacute;n un debate a tus alumnos en torno&nbsp;a la fragilidad de la memoria.&nbsp;Preg&uacute;ntales c&oacute;mo creen&nbsp;que han podido llegar&nbsp;hasta nosotros&nbsp;testimonios de los diferentes per&iacute;odos hist&oacute;ricos? &iquest;Por qu&eacute; es necesario no dejar caer en el olvido y cu&aacute;les son las herramientas con las que contamos para ello. P&iacute;deles que describan un mundo en el que no existiesen los historiadores. &iquest;C&oacute;mo ser&iacute;a? &iquest;Cu&aacute;les ser&iacute;an las ventajas e inconvenientes?</p>
-	</body></html>
+			Despu&eacute;s de la presentaci&oacute;n</p>
+		<p>
+			Plantee unas preguntas para que los estudiantes discutan:</p>
+		<p class="tab1">
+			- &iquest;Pueden ser los relatos transmitidos de generaci&oacute;n en generaci&oacute;n &uacute;tiles para conocer la historia de las sociedades que nos precedieron? &iquest;Cu&aacute;les son los aspectos positivos y negativos?</p>
+		<p>
+			Por &uacute;ltimo, pida a los estudiantes que pregunten a sus abuelos sobre alg&uacute;n episodio de su propia historia personal o sobre alguna historia que les contaron cuando eran peque&ntilde;os. Despu&eacute;s, los estudiantes tendr&aacute;n que exponerla frente al resto de la clase.</p>
+		<p>
+			Proponga un debate en torno a la fragilidad de la memoria. Pregunte c&oacute;mo creen que han podido llegar hasta nosotros testimonios de los diferentes periodos hist&oacute;ricos, por qu&eacute; es necesario no dejar caer en el olvido los testimonios y cu&aacute;les son las herramientas con las que contamos para ello. P&iacute;dales que describan un mundo en el que no existan los historiadores. &iquest;C&oacute;mo ser&iacute;a? &iquest;Cu&aacute;les ser&iacute;an las ventajas e inconvenientes?</p>
+	</body>
+</html>
