--- a/fuentes/visuales/grado06/guion01/guionAbierto/CS_06_01_CO_Recurso130/Alumno.html
+++ b/fuentes/visuales/grado06/guion01/guionAbierto/CS_06_01_CO_Recurso130/Alumno.html
@@ -1,18 +1,12 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<!-- v : 10.10.8 -->
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-	
-	
-	<title></title>
-	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-	
-	<SCRIPT SRC='../_js/common.js'></SCRIPT>			
-	
-	<link rel="stylesheet" type="text/css" href="../_css/common.css" />
-	
-</head>
-<body>
+	<head>
+		<title></title>
+		<meta content="text/html; charset=iso-8859-1" http-equiv="Content-Type" />
+		<SCRIPT SRC='../_js/common.js'></SCRIPT>
+		<link href="../_css/common.css" rel="stylesheet" type="text/css" />
+	</head>
+	<body>
 		<p class="cabecera2">
 			Las fuentes escritas</p>
 		<p>
@@ -26,7 +20,10 @@
 		<p class="tab1">
 			- <span class="negrita">Bibliograf&iacute;a</span>: conjunto de libros sobre el mismo tema.</p>
 		<p>
-			Los&nbsp;<span class="negrita">documentos escritos </span>son la principal herramienta con la que cuentan los historiadores para conocer el pasado.&nbsp;Recogen fechas y acontecimientos hist&oacute;ricos que nos hablan de &eacute;pocas anteriores y de&nbsp;la sociedad del momento.</p>
+			Los&nbsp;documentos escritos son la principal herramienta con la que cuentan los historiadores para conocer el pasado.&nbsp;Recogen fechas y acontecimientos hist&oacute;ricos que nos hablan de &eacute;pocas anteriores y de&nbsp;la sociedad del momento.</p>
 		<p>
-			En el siglo XVIII se descubri&oacute; la <span class="negrita">piedra de Rosetta</span>, hallazgo que hizo posible conocer e interpretar los jerogl&iacute;ficos egipcios y, con ello, estudiar su cultura y pasado.</p>
-	</body></html>
+			En el siglo XVIII se descubri&oacute; la piedra de Rosetta, hallazgo que hizo posible conocer e interpretar los jerogl&iacute;ficos egipcios y, con ello, estudiar su cultura y pasado.</p>
+		<p>
+			&nbsp;</p>
+	</body>
+</html>
